manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        # image: ${BACKEND_IMAGE}  # 將由 Azure Pipeline 替換
        image: "akslabacr1211.azurecr.io/backend:latest"
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: ClusterIP
  selector:
    app: backend
  # ports:
  # - port: 5000
  #   targetPort: 5000
  ports:
    - protocol: TCP
      port: 5000        # ClusterIP 的暴露端口
      targetPort: 5000   # Pod 的容器端口
